# piolib-rs

./: Cargo.toml  NOTICE  README.md
src/: PARAM_ASSERTIONS_ENABLED_.rs  lib.rs  main.rs
src/include/: pio_platform.rs  piolib.rs
src/include/hardware/: clocks.rs  gpio.rs  pio_instructions.rs
src/include/hardware/regs/: proc_pio.rs
tests/: pio_platform_tests.rs
